# dtu_mlops_mnist

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  data.dvc  predict.dockerfile  pyproject.toml  requirements.txt  requirements_tests.txt  sweep.yaml  trainer.dockerfile  wandb.docker
.dvc/: config
.github/workflows/: cml.yaml  codecheck.yml  github_action.yml  tests.yml
dockerfiles/: busybox.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
dtu_mlops_mnist/: __init__.py  model_lightning.py  model_train_ligthning.py  predict_model.py  train_model.py  train_model_cml.py
dtu_mlops_mnist/config/: default_config.yaml
dtu_mlops_mnist/config/model/: model1.yaml
dtu_mlops_mnist/data/: make_dataset.py
dtu_mlops_mnist/models/: model.py
dtu_mlops_mnist/visualizations/: visualize.py
dtu_mlops_mnist/wandb/: latest-run
models/2024-01-05_13-05-18/: model.pth
models/2024-01-09_13-36-54/: model.pth
tests/: test_data.py  test_model.py  test_training.py
wandb/: latest-run
wandb/run-20240109_105326-hn8hsjsy/: run-hn8hsjsy.wandb
wandb/run-20240109_105420-b4wpbypj/: run-b4wpbypj.wandb
wandb/run-20240109_110155-lzkqs8v4/: run-lzkqs8v4.wandb
wandb/run-20240109_110447-r0lhltnp/: run-r0lhltnp.wandb
wandb/run-20240109_110717-f20pfk2o/: run-f20pfk2o.wandb
wandb/run-20240109_110925-phpqo00q/: run-phpqo00q.wandb
wandb/run-20240109_111148-p11jyliq/: run-p11jyliq.wandb
wandb/run-20240109_111302-cf0xoz71/: run-cf0xoz71.wandb
wandb/run-20240109_111451-u2r0htmg/: run-u2r0htmg.wandb
wandb/run-20240109_111735-h0ptoh30/: run-h0ptoh30.wandb
(+86 files in other folders)
